tests/fixtures/invalid/bool_pow_bytes.py
# Cannot power Bool and Bytes
x: bool = True ** b"hello"
